...

    <!-- Preferences: Notificaciones de positivos -->
    <string name="shared_prefs_positives_notifications">PositivesNotifications</string>

    <!-- Bottom Navigation Menu -->
    <string name="bottom_menu_item_1">Rastreador</string>
    <string name="bottom_menu_item_2">Positivo</string>
    <string name="bottom_menu_item_3">Contactos</string>
    <string name="bottom_menu_item_4">Histórico</string>


    <!-- Default Blank Fragment -->
    <string name="default_blank_fragment">DEFAULT BLANK FRAGMENT</string>

...
    <!-- Alarmas de localización -->
    <string name="locationAlarmsTitle">Alarmas de localización</string>
    <string name="labelActivateAlarm">Programar rastreo automático</string>
    <string name="init">Inicio</string>
    <string name="end">Fin</string>
    <string name="program">Programar</string>
    <string name="noAlarm">No tienes alarmas programadas</string>
    <string name="newAlarm">Nueva alarma programada</string>
    <string name="errorInvalidHours">Las horas especificadas no son válidas</string>
    <string name="errorAlarmCollision">Ya existen alarmas programadas para ese rango de horas</string>
    <string name="labelCurrentAlarm">Alarma pendiente</string>
    <string name="placeholderStart">15:00</string>
    <string name="placeholderEnd">16:00</string>
...
    <string name="riskiestContact">Contacto de mayor riesgo</string>
    <string name="riskPercent">Riesgo</string>
    <string name="startHour">Inicio</string>
    <string name="endHour">Fin</string>
    <string name="exposeTime">T. de exposición</string>
    <string name="meanProximity">Proximidad media</string>
    <string name="riskContacts">Contactos de riesgo</string>
    <string name="numberPositives">Número de positivos</string>
    <string name="meanValues">Valores medios</string>
    <string name="totalMeanRisk">Riesgo</string>
    <string name="totalMeanExposeTime">Tiempo de exposición</string>
    <string name="totalMeanProximity">Proximidad</string>
    <string name="generalData">Datos generales</string>
    <string name="riskContactInMap">Contacto de riesgo</string>

    <!-- Fragment: Comprobación de contactos de riesgo -->
    <string name="manualCheck">Comprobación manual</string>
    <string name="periodicCheck">Comprobación periódica</string>
    <string name="checkRiskContacts">Comprobar contactos de riesgo</string>
    <string name="scheduledAlarms">Alarmas programadas</string>
    <string name="manualCheckExplanation">Inicia una comprobación manualmente para detectar posibles contactos de riesgo con otros positivos.</string>
    <string name="periodicCheckExplanation">Programa horas concretas del día para realizar la comprobación de contactos de riesgo. Esta comprobación se repetirá todos los días a las horas indicadas.</string>
    <string name="checkHour">Hora de la comprobación</string>
    <string name="riskContactCheckingPlaceholder">Comparando tus localizaciones con las de otros positivos...</string>
    <string name="checkAlarmSetSnackbar">Alarma de comprobación programada correctamente.</string>
    <string name="checkAlarmErrorCollision">Ya existen alarmas de comprobación programadas para esa hora.</string>
    <string name="checkAlarmErrorCountLimit">No puedes programar más de %d alarmas de comprobación.</string>
    <string name="addRiskContactAlarmBtnDescription">Añadir alarma de comprobación.</string>
    <string name="tabCheck">Comprobar</string>
    <string name="tabResults">Resultados</string>

    <!-- Notificaciones: Resultados de la Comprobación de Contactos de Riesgo -->
    <string name="resultNotificationTitle">Resultados de la comprobación</string>
    <string name="resultNotificationHealthy">No has tenido contacto con ningún positivo.</string>
    <string name="resultNotificationCheckingErrorTitle">Error durante la comprobación de contactos</string>
    <string name="resultNotificationCheckingError">No ha sido posible realizar la comprobación de contactos de riesgo.</string>
...
