...
        android:id="@+id/tracker"
        android:name="es.uniovi.eii.contacttracker.fragments.tracklocation.TrackLocationTabsFragment"
        android:label="Rastreo de ubicación"
        tools:layout="@layout/fragment_tracker"/>

    <fragment
        android:id="@+id/notifyPositive"
        android:name="es.uniovi.eii.contacttracker.fragments.notifypositive.NotifyPositiveFragment"
        android:label="Notificar un positivo"
        tools:layout="@layout/fragment_notify_positive">
        <action
            android:id="@+id/showPrivacyPolicy"
            app:destination="@id/privacyPolicyFragment"
...
            app:popExitAnim="@android:anim/fade_out" />
    </fragment>

    <fragment
        android:id="@+id/riskContacts"
        android:name="es.uniovi.eii.contacttracker.fragments.riskcontacts.RiskContactTabsFragment"
        android:label="Contactos de Riesgo"
        tools:layout="@layout/fragment_risk_contact">
        <action
            android:id="@+id/showResultDetails"
            app:destination="@id/resultDetailsFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
...
